src/components/Pages/Cart/Cart.module.css
.Cart {
  display: grid;
  grid-template-columns: 2fr 500px;
  grid-template-rows: auto 1fr;
  gap: 1rem;
  padding-inline: 2rem;
  height: 100%;
}

.Cart > h2 {
  grid-column: span 2;
}

/* empty cart */

.emptyCart {
  grid-column: span 2;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
}

.emptyCart h3 {
  margin-bottom: 0;
  font-size: 2rem;
}

.emptyCart p {
  font-size: 1.3rem;
}

/* left side */

.cartItems {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.cartItemContainer {
  display: flex;
  gap: 1rem;
  background-color: white;
  border-radius: 10px;
  border: 2px solid #f1f2f3;
}

.itemInfo {
  padding: 1rem 2rem 1rem 0;
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  justify-content: space-between;
}

.itemInfoTop {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 1rem;
}

.itemInfoMiddle {
  flex-grow: 1;
}

.itemInfoBottom {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 1rem;
}

.itemInfoBottom button {
  display: flex;
  align-items: center;
  border: none;
  cursor: pointer;
  border-radius: 5px;
}

.qtyContainer {
  display: flex;
  align-items: center;
  gap: 1rem;
}

.qtyButtonMinus,
.qtyButtonPlus,
.deleteButton {
  transition: 0.3s ease;
}

.qtyButtonMinus {
  color: white;
  background-color: #f2525a;
}

.qtyButtonPlus {
  color: white;
  background-color: #52b788;
}

.deleteButton {
  color: #f2525a;
  background-color: white;
}

.qtyButtonPlus:hover {
  background-color: #449c74;
}

.qtyButtonMinus:hover {
  background-color: #d9444c;
}

.deleteButton:hover {
  color: #d9444c;
}

/* right side */

.cartSummary {
  background-color: white;
  border: 2px solid #f1f2f3;
  border-radius: 10px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 2rem;
  gap: 1.5rem;
  height: 400px;
  text-align: center;
}

.cartSummary h2 {
  margin-top: 0;
}

.cartSummary h3,
.cartSummary p {
  margin: 0;
}

.cartSummary hr {
  width: 100%;
}

.cartPrices {
  display: flex;
  flex-direction: column;
  width: 100%;
  gap: 1.5rem;
}

.subTotal,
.delivery,
.total {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
}

.checkoutButton {
  cursor: pointer;
  color: #f5f5f5;
  background-color: #52b788;
  font-weight: 500;
  width: 100%;
  border: none;
  border-radius: 10px;
  padding: 1rem;
  transition: background-color 0.3s ease;
}

.checkoutButton:hover {
  background-color: #40916c;
}

@media (max-width: 1200px) {
  .Cart {
    grid-template-columns: 1fr;
  }

  .Cart > h2 {
    grid-column: span 1;
  }
}

@media (max-width: 650px) {
  .Cart > h2,
  .emptyCart {
    text-align: center;
  }

  .cartItemContainer {
    flex-wrap: wrap;
  }

  .cartItemContainer img {
    flex: 1;
    width: 0;
    height: auto;
  }

  .itemInfo {
    padding: 1rem 2rem;
  }
}

@media (max-width: 350px) {
  .itemInfoBottom {
    flex-wrap: wrap;
  }
  .qtyContainer {
    flex: 1;
    justify-content: center;
  }

  .deleteButton {
    flex: 1;
    justify-content: center;
  }
}

